[package]
name = "typed-gensym"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-gensym-decl = { path = "./typed-gensym-decl" }

[workspace]
members = ["typed-gensym-macro", "typed-gensym-decl"]